examples/secure-cluster/namespaces/team-a/team-a.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-a
  labels:
    customer.dk/owner: customer
    customer.dk/origin: team-a
    customer.dk/type: application-space
    netic.dk/cni.id: team-a-application-x
---
# Allow communication between pods in namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-team-a-pod-to-pod
  namespace: team-a
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-a-nginx
  namespace: team-a
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
